update to new build process